[tool.poetry]
name = "ds-downloads"
version = "0.1.0"
description = ""
authors = ["Jarosenb <jrosenberg@tacc.utexas.edu>"]

[tool.poetry.dependencies]
python = "3.10.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
fastapi = "^0.70.0"
agavepy = "^0.9.5"
redis = "^4.0.2"
zipfly = "^6.0.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
