[tool.poetry]
name = "ds-downloads"
version = "0.1.0"
description = ""
authors = ["Jarosenb <jrosenberg@tacc.utexas.edu>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
fastapi = "^0.104.1"
redis = "^4.0.2"
zipfly = "^6.0.3"
gunicorn = "^20.1.0"
paramiko = "^3.3.1"
requests = "^2.31.0"
ipython = "^8.17.2"
pickleshare = "^0.7.5"

[tool.poetry.dev-dependencies]
black = "^23.11.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
